--- a/popup.html
+++ b/popup.html
@@ -5,13 +5,10 @@
 </head>
 <body>
 
-  <h1>URL Marker</h1>
-  <ul>
-    <li>Right-click on a link and select <b>Mark as Checked</b>.</li>
-    <li>Press <kbd>Alt</kbd>+<kbd>C</kbd> to mark current page as checked.</li>
-  </ul>
-
-  <ul id="marked-urls">
+  <h1>Hidem (all)</h1>
+  <h2>Time to save time!</h2>
+  
+  <ul id="rules">
   </ul>
 
   <script src="popup.js"></script>
